# renv

./: .coverage  .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ideation.md  install.sh  pyproject.toml
.claude/commands/: review-paper.md
.codex/: config.toml
.codex/skills/: review-paper
.cursor/commands/: review-paper.md
.cursor/rules/: protocol.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.research/export/: adjudication.jsonl  artifact.jsonl  citation.jsonl  claim.jsonl  claim_evidence.jsonl  claim_relation.jsonl  config.jsonl  context_link.jsonl  dataset.jsonl  experiment.jsonl  finding.jsonl  log_entry.jsonl  log_evidence.jsonl  manifest.json  metric.jsonl  metric_def.jsonl  note.jsonl  paper.jsonl  paper_doc.jsonl  paper_note.jsonl  paper_reference.jsonl  plan_item.jsonl  project.jsonl  remote.jsonl  run.jsonl
cockpit/: README.md  index.html  package-lock.json  package.json  vite.config.js
cockpit/src/: App.jsx  api.js  layout.js  main.jsx  md.js  nav.js  nodes.jsx  pdfhl.js  styles.css  ui.jsx
docs/: BLUEPRINT.md
renv/: authoring.py  bibliography.py  claim.py  cli.py  config.py  experiment.py  extract.py  finding.py  indexer.py  ingest.py  links.py  mcp_server.py  paper_doc.py  phases.py  project.py  refs.py  retrieve.py  review.py  store.py  web.py
renv/corpus/: __init__.py  chunk.py  cite.py  index_store.py  indexer.py  parse.py  retrieve.py  selectors.py  verify.py
renv/papers/: __init__.py  bibliography.py  extract.py  ingest.py  paper_doc.py  paper_note.py
renv/research/: __init__.py  argument.py  authoring.py  claim.py  dataset.py  db.py  experiment.py  finding.py  links.py  lint.py  log.py  phases.py  plan.py  regions.py  remote.py  review.py  search.py
renv/web/: index.html
reref/: __init__.py  argument.py  authoring.py  cite.py  claim.py  cli.py  conferences.py  config.py  dataset.py  db.py  embed.py  experiment.py  extract.py  finding.py  ingest.py  links.py  lint.py  log.py  mcp_server.py  paper_note.py  plan.py  project.py  refs.py  regions.py  remote.py  retrieve.py  review.py  selectors.py  store.py  web.py
reref/web/: index.html
skills/review-paper/: SKILL.md
templates/project/: AGENTS.md  README.md  gitignore  ideation.md
templates/writing/: paper-structure.md  style.md  thesis-structure.md
tests/: test_architecture.py  test_argument.py  test_async_run.py  test_authoring.py  test_bibliography.py  test_claim_graph.py  test_conferences.py  test_discover.py  test_epistemics.py  test_exp_rename.py  test_export_import.py  test_findings.py  test_hardening.py  test_idle_exit.py  test_ingest_kb.py  test_ingest_run.py  test_install.py  test_links.py  test_mcp_server.py  test_metric_defs.py  test_pipeline.py  test_plan.py  test_questions_relations.py  test_regions.py  test_research_store.py  test_review.py  test_root_guard.py  test_round1_fixes.py  test_search.py  test_selectors.py  test_template.py  test_web.py
tests/clients/: test_api_surface.py  test_idle_exit.py  test_install.py  test_mcp_server.py  test_web.py
tests/corpus/: test_pipeline.py  test_selectors.py
tests/papers/: test_bibliography.py  test_discover.py  test_hardening.py  test_ingest_kb.py  test_parser_properties.py
tests/research/: test_argument.py  test_async_run.py  (+18 more)
(+15 files in other folders)
