[project]
name = "renv"
version = "0.1.0"
description = "A research environment template: a shared paper library + the renv engine for local span-anchored, verified citations. Each paper lives in its own project repo under projects/."
readme = "README.md"
requires-python = ">=3.10"
# Core runs on the stdlib only. Heavy SOTA backends are optional extras
# (lazy-imported) so the pipeline works today on Python 3.14 without torch.
dependencies = []

[project.optional-dependencies]
pdf = ["pdfminer.six"]            # light, MIT — default PDF text extraction
parse-sota = ["docling"]          # MIT — page_no + bbox + charspan (upgrade)
anchor = ["rapidfuzz"]            # MIT — robust fuzzy re-anchoring across versions
embed-local = ["sentence-transformers"]  # Qwen3-Embedding / BGE-M3
verify-local = ["transformers", "torch"]  # FactCG / MiniCheck
api = ["anthropic", "openai"]     # LLM-judge verifier / API embeddings

[project.scripts]
renv = "renv.cli:main"

[dependency-groups]
# Dev tooling, installed by `uv sync` but not shipped with the package.
dev = ["pytest>=8", "ruff>=0.8"]

[tool.uv]
# All optional-dependencies extras are lazy-imported heavy SOTA backends;
# leave them out of the default sync. Enable with e.g. `uv sync --extra pdf`.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["renv*"]

[tool.setuptools.package-data]
renv = ["web/*.html", "web/dist/*", "web/dist/assets/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# correctness + import hygiene; formatting stays human (match the file around you)
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
# the compact test idiom (setup pairs on one line) and script-style headers
"tests/*" = ["E702", "E402", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["renv"]
